@@ -685,6 +685,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 21814) Message shown when rolling back an edit with a deleted username
   now shows '(username deleted)' instead of broken user tool links
 * (bug 21536) Fixed JavaScript error on Special:Search caused by an incorrect ID
+* (bug 21535) RecentChanges RSS feed now always recognises the namespace filter,
+  previously it sometimes didn't due to caching.
 
 == API changes in 1.16 ==
 
